--- a/Ethereal Cloud/Ethereal Cloud/Ethereal Cloud/Pages/Shared/_Layout.cshtml
+++ b/Ethereal Cloud/Ethereal Cloud/Ethereal Cloud/Pages/Shared/_Layout.cshtml
@@ -12,8 +12,8 @@
 
     <!--Header-->
     <header class="row">
-
-        <h1>Title</h1>
+        <img src="~/Logo.png" alt="logo" class="logo">
+        <h1>Ethereal Cloud</h1>
 
     </header>
 
@@ -57,8 +57,9 @@
 
             </nav>
 
-            <h1>Content</h1>
-            @RenderBody()
+            <div class="content render-body">
+                @RenderBody()
+            </div>
 
         </div>
 
