--- a/Ethereal Cloud/Ethereal Cloud/wwwroot/css/site.css
+++ b/Ethereal Cloud/Ethereal Cloud/wwwroot/css/site.css
@@ -4,12 +4,12 @@
 
 /*-------------Debugging-------------*/
 
-
+/*
 * {
     border: 1px solid red !important;
 }
 
-    
+    */
 
 html {
     font-family: Arial, Helvetica, sans-serif;
@@ -29,7 +29,6 @@ header, footer {
     width:auto;
     height: 5rem;
 }
-
 
 /*Sidebar*/
 
