--- a/Ethereal Cloud/Pages/Shared/_Layout.cshtml
+++ b/Ethereal Cloud/Pages/Shared/_Layout.cshtml
@@ -31,10 +31,10 @@
                         <a class="nav-link @(Context.Request.Path == "/Index" || Context.Request.Path == "/" ? "active" : "")" asp-area="" asp-page="/Index">Index</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link @(Context.Request.Path == "/Account" ? "active" : "")" asp-area="" asp-page="/Account">Account</a>
+                        <a class="nav-link @(Context.Request.Path == "/Login" ? "active" : "")" asp-area="" asp-page="/Login">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link @(Context.Request.Path == "/Error" ? "active" : "")" asp-area="" asp-page="/Error">Error</a>
+                        <a class="nav-link @(Context.Request.Path == "/Signup" ? "active" : "")" asp-area="" asp-page="/Signup">Sign Up</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" aria-disabled="true">Disabled</a>
