--- a/Ethereal Cloud/Pages/Signup.cshtml
+++ b/Ethereal Cloud/Pages/Signup.cshtml
@@ -5,7 +5,7 @@
     <html>
     <body>
 
-        @using (Html.BeginForm("SignupPost", "Signup", FormMethod.Post))
+        @using (Html.BeginForm("SignupPostAsync", "Signup", FormMethod.Post))
         {
             <div>
                 <label for="email">Username:</label>
