--- a/Ethereal Cloud/Pages/Signup.cshtml
+++ b/Ethereal Cloud/Pages/Signup.cshtml
@@ -1,28 +1,29 @@
 ﻿@page
 @model Ethereal_Cloud.Pages.SignupModel
 @{
-    <!DOCTYPE html>
-    <html>
-    <body>
+    <div>
+        <form method="post" asp-page-handler="Signup">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required />
 
-        @using (Html.BeginForm("SignupPostAsync", "Signup", FormMethod.Post))
-        {
-            <div>
-                <label for="email">Username:</label>
-                <input type="text" name="username" required />
-            </div>
-            <div>
-                <label for="password">Email:</label>
-                <input type="email" name="email" required />
-            </div>
-            <div>
-                <label for="password">Password:</label>
-                <input type="password" name="password" required />
-            </div>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required />
 
-            <button type="submit">Submit</button>
-        }
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required />
 
-    </body>
-    </html>
+            <button type="submit">Signup</button>
+        </form>
+
+        <script>
+            var popupStatus = '@ViewData["PopupStatus"]';
+            if (popupStatus === 'Success') {
+                alert('Signup successful!');
+                // You can customize the alert or use a more sophisticated popup library
+            } else if (popupStatus === 'Failure') {
+                alert('Signup failed!');
+                // You can customize the alert or use a more sophisticated popup library
+            }
+        </script>
+    </div>
 }
