Fixed index model

--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@page
+@model Ethereal_Cloud.Pages.IndexModel
 @{
-    ViewData["Title"] = "Home Page";
-
     <div>
         <form method="post" asp-page-handler="File">
             <label for="username">Username:</label>
