--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿@page
+@model Ethereal_Cloud.Pages.IndexModel
 @{
-    ViewData["Title"] = "Home Page";
-
-    <h1>Index Page</h1>
+    <meta charset="utf-8">
+    Layout = "HomeLayout";
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/Login.css" asp-append-version="true">
+    <link rel="stylesheet" href="/css/Home.css" asp-append-version="true">
 
 }
