--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -2,8 +2,8 @@
 @model Ethereal_Cloud.Pages.IndexModel
 @{
     <meta charset="utf-8">
-    Layout = "HomeLayout";
+    Layout = "IndexLayout";
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/Login.css" asp-append-version="true">
-    <link rel="stylesheet" href="/css/Home.css" asp-append-version="true">
+    <link rel="stylesheet" href="/css/Site.css" asp-append-version="true">
+    <link rel="stylesheet" href="/css/Index.css" asp-append-version="true">
 }
