--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -2,39 +2,66 @@
 @model Ethereal_Cloud.Pages.LoginSignupModel
 @{
     <meta charset="utf-8">
-    Layout = "IndexLayout";
+    Layout = null;
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/Site.css" asp-append-version="true">
     <link rel="stylesheet" href="/css/Index.css" asp-append-version="true">
 
+    <center class="align-content-center">
+        <!-- Main -->
+        <main class="row">
+            <img src="~/Logo.png" alt="logo" class="logo">
+            <h1>Ethereal Cloud</h1>
 
-    <div>
-        <form method="post" asp-page-handler="Login">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required />
+            <!-- Content -->
+            <div class="content col-10">
+                <!-- Topbar -->
+                <nav class="navbar"></nav>
+                <div class="main">
+                    <input type="checkbox" id="chk" aria-hidden="true">
 
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required />
+                    <!--Sign up -->
+                    <div class="signup">
+                        <form method="post" asp-page-handler="Signup">
+                            <label class="labelstart" for="chk" aria-hidden="true">Sign up</label>
+                            <input type="username" id="username" name="username" placeholder="username" required="">
 
-            <button type="submit">Login</button>
-        </form>
+                            <input type="email" id="email" name="email" placeholder="Email" required="" />
+                            <input type="password" id="password" name="password" placeholder="Password" required="" />
 
-        <form method="post" asp-page-handler="Signup">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required />
+                            <input type="password" name="pswd" placeholder="Confirm password" required="">
+                            <button type="submit">SignUp</button>
+                        </form>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required />
+                        <script>
+                            var popupStatus = '@ViewData["PopupStatus"]';
+                            alert(popupStatus);
+                        </script>
+                    </div>
 
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required />
+                    <!-- Login  -->
+                    <div class="login">
+                        <form method="post" asp-page-handler="Login">
+                            <label class="labelbottom" for="chk" aria-hidden="true">Login</label>
+                            <input type="email" id="email" name="email" placeholder="Email" required="" />
+                            <input type="password" id="password" name="password" placeholder="Password" required="" />
+                            <button type="submit">Login</button>
+                        </form>
 
-            <button type="submit">Signup</button>
-        </form>
+                        <script>
+                            var popupStatus = '@ViewData["PopupStatus"]';
+                            alert(popupStatus);
+                        </script>
+                    </div>
+                </div>
 
-        <script>
-            var popupStatus = '@ViewData["PopupStatus"]';
-            alert(popupStatus);
-        </script>
-    </div>
+                <!--Bypass -->
+                <ul class="sidebar-body navbar-nav me-auto mb-2 mb-lg-0 nav-pills nav-justified">
+                    <li class="button">
+                        <a class="nav-link @(Request.Path == "/Upload" || Request.Path == "/" ? "active" : "")" asp-area="" asp-page="/Upload">Press to bypass the login page!</a>
+                    </li>
+                </ul>               
+            </div>
+        </main>
+    </center>
 }
