--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -29,14 +29,9 @@
                             <input type="email" id="email" name="email" placeholder="Email" required="" />
                             <input type="password" id="password" name="password" placeholder="Password" required="" />
 
-                            <input type="password" name="pswd" placeholder="Confirm password" required="">
+                            <input type="password" id="confpassword" name="pswd" placeholder="Confirm password" required="">
                             <button type="submit">SignUp</button>
-                        </form>
-
-                        <script>
-                            var popupStatus = '@ViewData["PopupStatus"]';
-                            alert(popupStatus);
-                        </script>
+                        </form>                        
                     </div>
 
                     <!-- Login  -->
@@ -56,6 +51,7 @@
                 </div>
 
                 <!--Bypass -->
+                <p> </p>
                 <ul class="sidebar-body navbar-nav me-auto mb-2 mb-lg-0 nav-pills nav-justified">
                     <li class="button">
                         <a class="nav-link @(Request.Path == "/Upload" || Request.Path == "/" ? "active" : "")" asp-area="" asp-page="/Upload">Press to bypass the login page!</a>
