Made changes to endpoint

--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Ethereal_Cloud.Pages.IndexModel
+@model Ethereal_Cloud.Pages.UploadModel
 @{
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
