--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -10,7 +10,10 @@
     <!-- Box at top of screen -->
     <div class="text-box">
         <div>
-            
+            <form method="post" asp-page-handler="File">
+                <button type="submit">File</button>
+            </form>
+
             <script>
                 var popupStatus = '@ViewData["PopupStatus"]';
                 alert(popupStatus);
@@ -19,13 +22,19 @@
 
         <h2>Files</h2>
 
-        <h2>Files</h2>
-        @foreach (var file in Model.Files)
+        @if (Model.Files != null)
         {
-            <div>
-                <span>@file.Filename</span>
-                <a asp-page-handler="Download" asp-route-filename="@file.Filename">Download</a>
-            </div>
+            @foreach (var file in Model.Files)
+            {
+                <div>
+                    <span>@file.Filename</span>
+                    <a asp-page-handler="Download" asp-route-filename="@file.Filename">Download</a>
+                </div>
+            }
+        }
+        else
+        {
+            <p>No files available.</p>
         }
 
     </div>
