Revert "Update on load"
This reverts commit 75419d40c89ef07a005c6489ee3be22acd58b327.

--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -11,12 +11,18 @@
     <div class="text-box">
         <div>
             <form method="post" asp-page-handler="File">
+
                 <button type="submit">File</button>
             </form>
 
+            <p id="test-out"></p>
+
             <script>
                 var popupStatus = '@ViewData["PopupStatus"]';
-                alert(popupStatus);
+
+                let out = document.getElementById("test-out");
+                out.innerText = popupStatus;
+
             </script>
         </div>
 
