--- a/Ethereal Cloud/wwwroot/css/Upload.css
+++ b/Ethereal Cloud/wwwroot/css/Upload.css
@@ -2,19 +2,14 @@
     text-align: center;
     padding: 25px;
     margin-top: 15px;
-    margin-left: 310px;
-    margin-right: 15px;
     border-radius: 25px;
-    height: 600px;
+    height: fit-content;
     background-color: #dee4ec;
 }
 
-/* Upload box */
 .upload-box {
     text-align: center;
     margin-top: 5px;
-    margin-left: 310px;
-    margin-right: 15px;
     border-radius: 25px;
     border: dashed;
     height: fit-content;
@@ -28,15 +23,6 @@
     display: inline-block;
     margin-top: 5px;
     padding: 5px;
-}
-
-.btn {
-    background-color: mediumpurple;
-    padding: 8px 20px;
-    border-radius: 8px;
-    font-size: 20px;
-    cursor: pointer;
-    font-weight: bold;
 }
 
 .upload-btn-wrapper input[type=file] {
