--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -16,7 +16,6 @@
             <!-- Content -->
             <div class="content col-10">
                 <!-- Topbar -->
-                <nav class="navbar"></nav>
                 <div class="main">
                     <input type="checkbox" id="chk" aria-hidden="true">
 
@@ -45,11 +44,10 @@
                     </div>
                 </div>
 
-                <!--Bypass -->
-                <p> </p>
-                <ul class="sidebar-body navbar-nav me-auto mb-2 mb-lg-0 nav-pills nav-justified">
+                <!--Bypass Remove later!-->                
+                <ul>
                     <li class="button">
-                        <a class="nav-link @(Request.Path == "/Upload" || Request.Path == "/" ? "active" : "")" asp-area="" asp-page="/Upload">Press to bypass the login page!</a>
+                        <a class="temp-link @(Request.Path == "/Upload" || Request.Path == "/" ? "active" : "")" asp-area="" asp-page="/Upload">Press to bypass the login page!</a>
                     </li>
                 </ul>               
             </div>
