--- a/Ethereal Cloud/wwwroot/css/Site.css
+++ b/Ethereal Cloud/wwwroot/css/Site.css
@@ -35,14 +35,8 @@ a {
     text-align: center;
 }
 
-.nav-link {
+.temp-link {
     color: #ffffff;
-}
-
-.navbar {
-    padding: 20px;
-    background: #7045BA;
-    border-radius: 5px;
 }
 
 .form input[type="file"] {
@@ -77,81 +71,4 @@ a {
 
 input[type="text"] {
     float: left;
-}
-
-.top-bar {
-    color: white;
-    margin-left: 300px;
-    background: linear-gradient(to right, #0f0c29, #302b63);
-    padding: 25px;
-    text-align: center;
-}
-
-.wrapper .sidebar {
-    background: linear-gradient(to bottom, #0f0c29, #302b63);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 300px;
-    height: 100%;
-    padding: 20px 0;
-}
-
-    .wrapper .sidebar .profile {
-        margin-bottom: 30px;
-        text-align: center;
-    }
-
-        .wrapper .sidebar .profile img {
-            display: block;
-            height: 100px;
-            margin: 0 auto;
-        }
-
-        .wrapper .sidebar .profile h3 {
-            color: #ffffff;
-            margin: 10px 0 5px;
-        }
-
-    .wrapper .sidebar ul li a {
-        display: block;
-        padding: 13px 30px;
-        border-bottom: 1px solid #10558d;
-        color: rgb(241, 237, 237);
-        font-size: 16px;
-        position: relative;
-    }
-
-        .wrapper .sidebar ul li a .icon {
-            color: #dee4ec;
-            width: 30px;
-            display: inline-block;
-        }
-
-
-
-        .wrapper .sidebar ul li a:hover,
-        .wrapper .sidebar ul li a.active {
-            color: #0c7db1;
-            background: white;
-            border-right: 2px solid rgb(5, 68, 104);
-        }
-
-            .wrapper .sidebar ul li a:hover .icon,
-            .wrapper .sidebar ul li a.active .icon {
-                color: #0c7db1;
-            }
-
-            .wrapper .sidebar ul li a:hover:before,
-            .wrapper .sidebar ul li a.active:before {
-                display: block;
-            }
-
-body.active .wrapper .sidebar {
-    left: -225px;
-}
-
-body.active .wrapper .section {
-    margin-left: 0;
-    width: 100%;
 }
