--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -2,7 +2,7 @@
 @model Ethereal_Cloud.Pages.UploadModel
 @{
     <meta charset="utf-8">
-    <title>Upload</title>
+    <title>File Upload</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     Layout = null;
     <link rel="stylesheet" href="/css/Site.css" asp-append-version="true">
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <div class="container-fluid">
+        <div class="container">
             <img src="~/Logo.png" alt="logo" class="logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -19,13 +19,10 @@
             <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)">Link</a>
-                    </li>
+                        <a class="nav-link @(Request.Path == "/Upload" || Request.Path == "/" ? "active" : "")" class="icon" asp-area="" asp-page="/Upload">My Files</a>
+                    </li>                    
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)">Link</a>
+                        <a class="nav-link @(Request.Path == "/Bin" || Request.Path == "/" ? "active" : "")" class="icon" asp-area="" asp-page="/Bin">Bin</a>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -36,48 +33,47 @@
         </div>
     </nav>
 
-    <div class="container-fluid mt-3">
-        <h3>Navbar Forms</h3>
-        <p>You can also include forms inside the navigation bar.</p>
+    <div class="container mt-3">
+        <h3 style="text-align:center;"><b>My Files</b></h3>
 
         <!-- Box at top of screen -->
-        <div class="text-box">
-            <div>
-                <form method="post" asp-page-handler="File">
-                    <button type="submit">File</button>
-                </form>
-            </div>
-
-            <h2>Files</h2>
-
-            @if (Model.Files != null)
-            {
-                @foreach (var file in Model.Files)
-                {
-                    <div>
-                        <span>@file.Filename</span>
-                        <a asp-page-handler="Download" asp-route-filename="@file.Filename">Download</a>
-                    </div>
-                }
-            }
-            else
-            {
-                <p>No files available.</p>
-            }
+        <div class="temp-refresh-btn">
+            <form method="post" asp-page-handler="File">
+                <button type="submit">Click to load files</button>
+            </form>                        
         </div>
 
-        <!-- Box at bottom of screen -->
+        <!-- Appears when the load files button is clicked -->
+        <div class="row">
+            <div class="col-sm">
+                @if (Model.Files != null)
+                {
+                    @foreach (var file in Model.Files)
+                    {
+                        <div>
+                            <span>@file.Filename</span>
+                            <a asp-page-handler="Download" asp-route-filename="@file.Filename">Download</a>
+                        </div>
+                    }
+                }        
+            </div>
+        </div>        
+    </div>
+
+    <!-- Upload box fixed to bottom of screen -->
+    <nav class="container mt-3 fixed-bottom" style="margin-bottom: 8px;">
         <div class="upload-box">
-            <h1>Upload</h1>
+            <h3>Upload your files</h3>
             <form method="post" enctype="multipart/form-data" asp-page-handler="Upload">
-                <div>
-                    <label for="fileInput">Choose a file:</label>
-                    <input type="file" id="fileInput" name="uploadedFile" />
+                
+                <div class="mb-3" id="file-input-box">
+                    <input class="form-control" type="file" id="formFileMultiple" multiple>
                 </div>
-                <div>
-                    <input type="submit" value="Upload" />
+                
+                <div class="mb-3">
+                    <input type="submit" class="btn btn-success" value="Upload" />
                 </div>
             </form>
-        </div>
-    </div>
-}
+        </div>            
+    </nav>
+}   
