--- a/Ethereal Cloud/wwwroot/css/Index.css
+++ b/Ethereal Cloud/wwwroot/css/Index.css
@@ -1,19 +1,19 @@
 ﻿body {
     margin: 0;
-    padding: 0;
+    padding-top: 30px;
     display: flex;
     justify-content: center;
-    align-items: center;
     min-height: 100vh;
     background: linear-gradient(to bottom, #0f0c29, #302b63);
 }
 
 .main {
-    width: 350px;
-    height: 500px;
+    width: 320px;
+    height: 410px;
     overflow: hidden;
     border-radius: 10px;
     box-shadow: 5px 20px 50px #000;
+    margin-top: 35px;
 }
 
 h1 {
@@ -32,7 +32,7 @@ h1 {
 
 .labelstart {
     color: #fff;
-    font-size: 2.3em;
+    font-size: 1.8em;
     justify-content: center;
     display: flex;
     margin: 10px;
@@ -43,7 +43,7 @@ h1 {
 
 .labelbottom {
     color: #fff;
-    font-size: 2.3em;
+    font-size: 1.8em;
     justify-content: center;
     display: flex;
     margin: 130px;
@@ -67,13 +67,13 @@ input {
 
 button {
     width: 60%;
-    height: 40px;
+    height: 28px;
     margin: 10px auto;
     justify-content: center;
     display: block;
     color: #fff;
     background: #573b8a;
-    font-size: 1em;
+    font-size: 15px;
     font-weight: bold;
     margin-top: 20px;
     outline: none;
@@ -88,7 +88,7 @@ button {
     }
 
 .login {
-    height: 480px;
+    height: 380px;
     background: #eee;
     border-radius: 98% / 10%;
     transform: translateY(-180px);
@@ -101,7 +101,7 @@ button {
     }
 
 #chk:checked ~ .login {
-    transform: translateY(-580px);
+    transform: translateY(-505px);
 }
 
     #chk:checked ~ .login label {
@@ -112,6 +112,13 @@ button {
     transform: scale(.6);
 }
 
+
+/* Remove the below once development has finished! */
 .temp-link {
-    color: #ffffff;
+    color: lightcoral;
+}
+
+#remove-later-link {
+    margin-top: 20px;
+    font-size: 16px;
 }
