--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -10,73 +10,74 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <div class="container">
-            <img src="~/Logo.png" alt="logo" class="logo">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="mynavbar">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link @(Request.Path == "/Upload" || Request.Path == "/" ? "active" : "")" class="icon" asp-area="" asp-page="/Upload">My Files</a>
-                    </li>                    
-                    <li class="nav-item">
-                        <a class="nav-link @(Request.Path == "/Bin" || Request.Path == "/" ? "active" : "")" class="icon" asp-area="" asp-page="/Bin">Bin</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link @(Request.Path == "/Settings" || Request.Path == "/" ? "active" : "")" class="icon" asp-area="" asp-page="/Settings">Settings</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="text" placeholder="Search">
-                    <button class="btn btn-primary" type="button">Search</button>
+    <div class="upload-page">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <div class="container">
+                <img src="~/Logo.png" alt="logo" class="logo">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="mynavbar">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link @(Request.Path == "/Upload" || Request.Path == "/" ? "active" : "")" class="icon" asp-area="" asp-page="/Upload">My Files</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link @(Request.Path == "/Bin" || Request.Path == "/" ? "active" : "")" class="icon" asp-area="" asp-page="/Bin">Bin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link @(Request.Path == "/Settings" || Request.Path == "/" ? "active" : "")" class="icon" asp-area="" asp-page="/Settings">Settings</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="text" placeholder="Search">
+                        <button class="btn btn-primary" type="button">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+
+        <div class="container mt-3">
+            <h3 style="text-align:center;"><b>My Files</b></h3>
+
+            <!-- Box at top of screen -->
+            <div class="temp-refresh-btn">
+                <form method="post" asp-page-handler="File">
+                    <button type="submit">Click to load files</button>
                 </form>
             </div>
-        </div>
-    </nav>
 
-    <div class="container mt-3">
-        <h3 style="text-align:center;"><b>My Files</b></h3>
-
-        <!-- Box at top of screen -->
-        <div class="temp-refresh-btn">
-            <form method="post" asp-page-handler="File">
-                <button type="submit">Click to load files</button>
-            </form>                        
-        </div>
-
-        <!-- Appears when the load files button is clicked -->
-        <div class="upload-row">
-            <div class="col-sm">
+            <!-- Appears when the load files button is clicked -->
+            <div id="scrollbox" class="row">
                 @if (Model.Files != null)
                 {
                     @foreach (var file in Model.Files)
                     {
                         <div id="uploaded-files">
-                            <span>@file.Filename</span>
-                            <a asp-page-handler="Download" asp-route-filename="@file.Filename">Download</a>
+                            <a asp-page-handler="Download" asp-route-filename="@file.Filename">
+                                <img src="~/Logo.png" alt="logo" class="upload-img" >
+                                <p>@file.Filename</p>
+                            </a>
                         </div>
                     }
-                }        
+                }
             </div>
-        </div>        
+        </div>
     </div>
 
-    <!-- Upload box fixed to bottom of screen -->
-    <nav class="container mt-3 fixed-bottom" style="margin-bottom: 5px;">
+    <nav class="container mt-3" style="margin-bottom: 5px;">
         <div class="upload-box">
             <h3>Upload your files</h3>
             <form method="post" enctype="multipart/form-data" asp-page-handler="Upload">
-                
+
                 <div class="mb-3" id="file-input-box">
                     <input class="form-control" type="file" name="uploadedFile" id="fileInput" multiple>
                 </div>
-                
+
                 <div class="mb-3">
                     <input type="submit" class="btn btn-success" value="Upload" />
                 </div>
             </form>
-        </div>            
+        </div>
     </nav>
-}   
+}
