--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -2,7 +2,7 @@
 @model Ethereal_Cloud.Pages.UploadModel
 @{
     <meta charset="utf-8">
-    <title>File Upload</title>
+    <title>My Files</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     Layout = null;
     <link rel="stylesheet" href="/css/Site.css" asp-append-version="true">
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Top Navigation bar -->
     <div class="upload-page">
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container">
@@ -37,6 +38,7 @@
             </div>
         </nav>
 
+        <!-- Page title -->
         <div class="container mt-3">
             <h3 style="text-align:center;"><b>My Files</b></h3>
 
@@ -48,14 +50,14 @@
             </div>
 
             <!-- Appears when the load files button is clicked -->
-            <div id="scrollbox" class="row">
+            <div id="scrollbox" class="row">               
                 @if (Model.Files != null)
                 {
                     @foreach (var file in Model.Files)
                     {
-                        <div id="uploaded-files">
+                        <div class="uploaded-files">
                             <a asp-page-handler="Download" asp-route-filename="@file.Filename">
-                                <img src="~/Logo.png" alt="logo" class="upload-img" >
+                                <img src="~/Logo.png" alt="logo">
                                 <p>@file.Filename</p>
                             </a>
                         </div>
@@ -65,16 +67,13 @@
         </div>
     </div>
 
-    <nav class="container mt-3" style="margin-bottom: 5px;">
+    <!-- Bottom upload dotted box -->
+    <nav style="padding: 0px;" class="container mt-3">
         <div class="upload-box">
             <h3>Upload your files</h3>
             <form method="post" enctype="multipart/form-data" asp-page-handler="Upload">
-
                 <div class="mb-3" id="file-input-box">
                     <input class="form-control" type="file" name="uploadedFile" id="fileInput" multiple>
-                </div>
-
-                <div class="mb-3">
                     <input type="submit" class="btn btn-success" value="Upload" />
                 </div>
             </form>
