--- a/Ethereal Cloud/wwwroot/css/Upload.css
+++ b/Ethereal Cloud/wwwroot/css/Upload.css
@@ -16,20 +16,20 @@
 }
 
 /* Everything inside the containers for the files (img and file name) */
-.uploaded-files {
+#uploaded-files {
     background-color: lightblue;
     border: solid;
     width: min-content;
     margin: 5px;
 }
 
-    .uploaded-files img {
+    #uploaded-files img {
         width: 150px;
         height: auto;
         padding-top: 5px;
     }
 
-    .uploaded-files a p {
+    #uploaded-files a p {
         text-align: center;
         text-decoration: none;
         color: black;    
