--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -19,7 +19,7 @@
             <div class="signup">
                 <form method="post" asp-page-handler="Signup">
                     <label class="labelstart" for="chk" aria-hidden="true">Sign up</label>
-                    <input type="username" id="username" name="username" placeholder="username" required="">
+                    <input id="username" name="username" placeholder="username" required="">
 
                     <input type="email" id="email" name="email" placeholder="Email" required="" />
                     <input type="password" id="password" name="password" placeholder="Password" required="" />
@@ -33,7 +33,7 @@
             <div class="login">
                 <form method="post" asp-page-handler="Login">
                     <label class="labelbottom" for="chk" aria-hidden="true">Login</label>
-                    <input type="email" id="email" name="email" placeholder="Email" required="" />
+                    <input id="username" name="username" placeholder="Username Or Email" required="" />
                     <input type="password" id="password" name="password" placeholder="Password" required="" />
                     <button type="submit">Login</button>
                 </form>
@@ -45,6 +45,16 @@
             <li class="button">
                 <a class="temp-link @(Request.Path == "/Upload" || Request.Path == "/" ? "active" : "")" asp-area="" asp-page="/Upload"><b>Press to bypass login!</b></a>
             </li>
-        </ul>               
+        </ul>
+
     </center>
+
+
+    <!-- Console logger -->
+    <script>
+        var logger = '@ViewData["logger"]';
+        if (logger !== null) {
+            console.log(logger);
+        }
+    </script>
 }
